force-app/main/default/objects/student__c/fields/Mentor_name__c.field-meta.xml
<CustomField>
    <fullName>Mentor_name__c</fullName>
    <label>Mentor_name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Mentor__c.M_mail__c</field>
            <operation>equals</operation>
            <value>yash@gmail.com</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Mentor__c</referenceTo>
    <relationshipLabel>students</relationshipLabel>
    <relationshipName>students</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>