force-app/main/default/objects/student__c/fields/student_Email__c.field-meta.xml
<CustomField>
    <fullName>student_Email__c</fullName>
    <description>the capture the email id of the student</description>
    <inlineHelpText>help me with the student mail id</inlineHelpText>
    <label>student Email</label>
    <type>Email</type>
</CustomField>