force-app/main/default/objects/student__c/fields/student_phone_no__c.field-meta.xml
<CustomField>
    <fullName>student_phone_no__c</fullName>
    <label>student phone_no</label>
    <type>Phone</type>
</CustomField>